crates/main/rpstate/tests/fails/lookup_type_mismatch.stderr
error[E0277]: the trait bound `ReadOnly<u16>: TypeCheck<std::string::String>` is not satisfied
  --> tests/fails/lookup_type_mismatch.rs:11:22
   |
11 |     #[state(lookup = "port", parent = NetworkState)]
   |                      ^^^^^^ the trait `TypeCheck<std::string::String>` is not implemented for `ReadOnly<u16>`
   |
   = help: the trait `TypeCheck<std::string::String>` is not implemented for `ReadOnly<u16>`
           but trait `TypeCheck<u16>` is implemented for it
   = help: for that trait implementation, expected `u16`, found `std::string::String`
note: required by a bound in `assert_field_type_matches_lookup`
  --> tests/fails/lookup_type_mismatch.rs:11:22
   |
11 |     #[state(lookup = "port", parent = NetworkState)]
   |                      ^^^^^^ required by this bound in `assert_field_type_matches_lookup`
